<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/drawable_base_white_dialog_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_custom_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:paddingTop="12dip"
            android:text="@string/app_name"
            android:textColor="@color/pub_color_eight"
            android:textSize="18sp"/>

        <View
            android:id="@+id/view_custom_dialog_title_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/pub_color_six"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <TextView
                android:id="@+id/view_custom_dialog_content"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="2dip"
                android:paddingBottom="18dip"
                android:minHeight="140dip"
                android:paddingLeft="12dip"
                android:paddingRight="12dip"
                android:paddingTop="18dip"
                android:text="@string/app_name"
                android:textColor="@color/pub_color_eight"
                android:textSize="18sp"/>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/pub_color_six"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_custom_dialog_left_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/drawable_dialog_left_btn_bg"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/public_string_cancel"
            android:textColor="@color/pub_color_eight"
            android:textSize="18sp"/>

        <View
            android:id="@+id/view_custom_dialog_btn_divider"
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="@color/pub_color_six"/>

        <TextView
            android:id="@+id/view_custom_dialog_right_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/drawable_dialog_right_btn_bg"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/public_string_confirm"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>